# wos

./: chief_charms.xlsx  chief_gears.xlsx  dashboard.py  pyproject.toml
notebooks/: battle_optimizer.ipynb
pages/: 2_Rally_Simulator.py  3_Chief_Upgrades.py
settings/: battle_heroes.json  battle_params.npy  casualty_params.json  hero_roles.json
src/features/: army_strength.py
src/io/: io.py
src/optimizers/: battle_model.py  casualty_model.py  charms.py  gears.py
src/struct/: battle.py  charm.py  gear.py
web/: index.html  styles.css
web/charms/: index.html
web/charms/js/: charm.js  constants.js  main.js  optimizer.js
web/charms/svs_map/: charms.json
web/chief_gears/: index.html
web/chief_gears/data/: gears.json
web/chief_gears/js/: constants.js  gear.js  main.js  optimizer.js
web/js/: advanced-mode.js  defaults.js  main.js  nav.js  prng.js  results.js  sidebar.js  simulation.js  table-helpers.js
web/mia_fortune/: index.html
web/mia_fortune/js/: advanced-mode.js  constants.js  defaults.js  main.js  simulation.js
