[project]
name = "wos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.29",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ruff>=0.15.15",
    "scipy>=1.15.3",
    "streamlit>=1.58.0",
]
